[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "shadows"
description = "Low-memory data interfaces for scverse"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Danila Bredikhin" },
]
maintainers = [
    { name = "Danila Bredikhin", email = "danila@stanford.edu" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research"
]
dependencies = [
]
dynamic = ["version"]

[project.urls]
Documentation = "https://scverse.github.io/shadows"
Source = "https://github.com/scverse/shadows"
Home-page = "https://github.com/scverse/shadows"

[project.optional-dependencies]
dev = [
    "setuptools_scm",
]
doc = [
    "sphinx",
    "myst-parser",
    "sphinx-book-theme",
    "readthedocs-sphinx-search",
    "nbsphinx",
    "sphinx-automodapi",
    "sphinxcontrib-bibtex",
    "sphinx-autodoc-typehints",
    "furo",
    "ipython",  # fix nbsphinx syntax highlighting
    "pygments",
]
test = [
    "scipy",
    "pytest",
    "pytest-cov",
    "zarr",
    "pqdata",
    "mudata",
    "anndata",
]
all = [
    "scipy",
    "anndata >= 0.8",
    "mudata >= 0.2",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = [
    "./tests", # unit tests
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/shadows/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/shadows"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.ruff]
src = ["src"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # Error detected by Pycodestyle
    "F",   # Errors detected by Pyflakes
    "W",   # Warning detected by Pycodestyle
    "UP",  # pyupgrade
    "I",   # isort
    "TCH", # manage type checking blocks
    "ICN", # Follow import conventions
    "PTH", # Pathlib instead of os.path
    "PT",  # Pytest conventions
]
ignore = [
    # line too long -> we accept long comment lines; formatter gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> AnnData allows lambda expression assignments,
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix, i, j, k, l is reasonable indexing notation
    "E741",
]
